--- a/packages/vuetify/src/components/VSystemBar/_variables.scss
+++ b/packages/vuetify/src/components/VSystemBar/_variables.scss
@@ -3,28 +3,37 @@
 @use '../../styles/tools';
 
 // Defaults
-$system-bar-background: rgba(var(--v-theme-on-background), 0.02) !default;
+$system-bar-background: rgba(var(--v-theme-on-surface-variant)) !default;
 $system-bar-border-radius: map.get(settings.$rounded, 0) !default;
-$system-bar-icon-color: rgba(var(--v-theme-on-background), 0.50) !default;
+$system-bar-color: rgba(var(--v-theme-on-variant), var(--v-medium-emphasis-opacity)) !default;
 $system-bar-elevation: 0 !default;
 $system-bar-flex: 1 1 auto !default;
-$system-bar-font-size: tools.map-deep-get(settings.$typography, 'body-1', 'size') !default;
-$system-bar-font-weight: tools.map-deep-get(settings.$typography, 'body-1', 'weight') !default;
+$system-bar-font-size: tools.map-deep-get(settings.$typography, 'caption', 'size') !default;
+$system-bar-font-weight: tools.map-deep-get(settings.$typography, 'caption', 'weight') !default;
 $system-bar-height: 24px !default;
-$system-bar-icon-font-size: 16px !default;
+$system-bar-icon-font-size: tools.map-deep-get(settings.$typography, 'caption', 'size') !default;
+$system-bar-icon-margin-inline-start: 8px !default;
+$system-bar-icon-opacity: var(--v-medium-emphasis-opacity) !default;
+$system-bar-justify-content: flex-end !default;
+$system-bar-letter-spacing: tools.map-deep-get(settings.$typography, 'caption', 'letter-spacing') !default;
 $system-bar-lights-out-background: rgba(var(--v-theme-background), 0.7) !default;
+$system-bar-line-height: tools.map-deep-get(settings.$typography, 'caption', 'line-height') !default;
 $system-bar-padding: 0 8px !default;
 $system-bar-positions: absolute fixed !default;
-$system-bar-rounded-border-radius: map.get(settings.$rounded, 0) !default;
+$system-bar-text-align: end !default;
+$system-bar-text-transform: tools.map-deep-get(settings.$typography, 'caption', 'text-transform') !default;
 $system-bar-window-height: 32px !default;
-$system-bar-window-icon-font-size: 20px !default;
+$system-bar-window-icon-font-size: tools.map-deep-get(settings.$typography, 'body-1', 'size') !default;
 
-$system-bar-query: () !default;
-$system-bar-query: tools.map-deep-merge(
-  (
-    'border-radius': $system-bar-border-radius,
-    'elevation': $system-bar-elevation,
-    'position': $system-bar-positions
-  ),
-  $system-bar-query
-) !default;
+$system-bar-theme: (
+  $system-bar-background,
+  $system-bar-color
+);
+
+$system-bar-typography: (
+  $system-bar-font-size,
+  $system-bar-font-weight,
+  $system-bar-letter-spacing,
+  $system-bar-line-height,
+  $system-bar-text-transform
+);
