--- a/packages/vuetify/src/components/VAvatar/VAvatar.sass
+++ b/packages/vuetify/src/components/VAvatar/VAvatar.sass
@@ -5,7 +5,6 @@
 
 .v-avatar
   align-items: center
-  border-radius: $avatar-border-radius
   display: inline-flex
   justify-content: center
   line-height: $avatar-line-height
@@ -17,9 +16,7 @@
   @include avatar-sizes($avatar-sizes)
   @include avatar-density(('height', 'width'), $avatar-density)
   @include tools.rounded($avatar-border-radius)
-
-  > *
-    border-radius: inherit
+  @include tools.theme($avatar-theme...)
 
   &--rounded
-    +tools.rounded($avatar-rounded-border-radius)
+    @includes tools.rounded($avatar-rounded-border-radius)
