--- a/packages/vuetify/src/components/VAvatar/_variables.scss
+++ b/packages/vuetify/src/components/VAvatar/_variables.scss
@@ -3,13 +3,15 @@
 @use "../../styles/tools/functions";
 
 // Defaults
+$avatar-background: rgb(var(--v-theme-surface)) !default;
 $avatar-border-radius: map.get(variables.$rounded, 'circle') !default;
+$avatar-color: rgba(var(--v-theme-on-surface), var(--v-medium-emphasis-opacity)) !default;
 $avatar-density: ('default': 0, 'comfortable': -1, 'compact': -2) !default;
+$avatar-height: 40px !default;
 $avatar-line-height: normal !default;
 $avatar-rounded-border-radius: variables.$border-radius-root !default;
-$avatar-height: 40px !default;
-$avatar-width: 40px !default;
 $avatar-vertical-align: middle !default;
+$avatar-width: 40px !default;
 
 $avatar-sizes: () !default;
 $avatar-sizes: functions.map-deep-merge(
@@ -19,3 +21,8 @@ $avatar-sizes: functions.map-deep-merge(
   ),
   $avatar-sizes
 );
+
+$avatar-theme: (
+  $avatar-background,
+  $avatar-color
+) !default;
