chore(VBanner): normalize code styling and clean-up

--- a/packages/vuetify/src/components/VBanner/VBanner.sass
+++ b/packages/vuetify/src/components/VBanner/VBanner.sass
@@ -5,7 +5,6 @@
 .v-banner
   $root: &
 
-  background: $banner-background
   display: flex
   flex-wrap: wrap
   font-size: $banner-font-size
@@ -34,8 +33,7 @@
 
   @at-root
     @include tools.density('v-banner', $banner-density) using ($modifier)
-      &.v-banner--one-line
-        padding-top: $banner-padding-top + $modifier
+      padding-top: $banner-padding-top + $modifier
 
       &.v-banner--two-line
         padding-top: $banner-two-line-padding-top + $modifier
@@ -55,7 +53,7 @@
   .v-banner--mobile &
     flex: 1 0
 
-.v-banner-content
+.v-banner__content
   display: flex
   flex: 1 1
   min-width: 0
@@ -71,23 +69,12 @@
   .v-banner--three-line &
     margin-bottom: $banner-three-line-content-margin-bottom
 
-.v-banner-avatar
+.v-banner__avatar
   align-self: flex-start
   border-radius: $banner-avatar-border-radius
   margin-inline-end: $banner-avatar-margin-end
   margin-inline-start: $banner-avatar-margin-start
   position: relative
-
-  &::after
-    background: currentColor
-    border-radius: inherit
-    bottom: 0
-    content: ''
-    left: 0
-    opacity: $banner-avatar-after-opacity
-    position: absolute
-    right: 0
-    top: 0
 
   .v-banner--mobile &
     margin-inline-end: $banner-mobile-avatar-margin-end
@@ -97,16 +84,17 @@
 
 .v-banner-text
   -webkit-box-orient: vertical
-  align-self: flex-start
-  color: $banner-text-color
+  align-self: center
   display: -webkit-box
   line-height: $banner-text-line-height
   overflow: hidden
 
   .v-banner--one-line &
-    align-self: center
+    -webkit-line-clamp: 1
 
-  .v-banner--two-line &
+  .v-banner--two-line &,
+  .v-banner--three-line &
+    align-self: flex-start
     -webkit-line-clamp: 2
 
   .v-banner--three-line &
