feat(VToolbar): update default styling for height, bg & text color
these changes are designed to give v-toolbar a better identity now
that v-app-bar supports multiple layers of layout

--- a/packages/vuetify/src/components/VAppBar/VAppBar.sass
+++ b/packages/vuetify/src/components/VAppBar/VAppBar.sass
@@ -4,3 +4,7 @@
 
 .v-app-bar
   display: flex
+
+  &.v-toolbar
+    @include tools.elevation($app-bar-elevation)
+    @include tools.theme($app-bar-theme...)
