--- a/packages/vuetify/src/components/VTable/_variables.scss
+++ b/packages/vuetify/src/components/VTable/_variables.scss
@@ -4,7 +4,7 @@
 @use '../../styles/tools';
 
 $table-background: rgb(var(--v-theme-surface)) !default;
-$table-color: rgb(var(--v-theme-on-surface)) !default;
+$table-color: rgba(var(--v-theme-on-surface), var(--v-high-emphasis-opacity)) !default;
 $table-density: ('default': 0, 'comfortable': -2, 'compact': -4) !default;
 $table-header-height: 48px !default;
 $table-row-height: $table-header-height !default;
