fix(VListItem): apply opacity change to direct v-icons

--- a/packages/vuetify/src/components/VList/VListItem.sass
+++ b/packages/vuetify/src/components/VList/VListItem.sass
@@ -32,9 +32,11 @@
   $root: &
 
   align-self: center
-  color: rgba(var(--v-theme-on-surface), var(--v-medium-emphasis-opacity))
   transition: inherit
   transition-property: height, width
+
+  > .v-icon
+    opacity: var(--v-medium-emphasis-opacity)
 
   &--start
     margin-inline-end: $list-item-avatar-margin-end
