--- a/packages/vuetify/src/components/VMessages/VMessages.sass
+++ b/packages/vuetify/src/components/VMessages/VMessages.sass
@@ -11,7 +11,7 @@
   opacity: var(--v-medium-emphasis-opacity)
   position: relative
 
-  &__item
+  &__message
     line-height: $messages-line-height
     word-break: break-word
     overflow-wrap: break-word
