--- a/packages/vuetify/src/styles/settings/_utilities.scss
+++ b/packages/vuetify/src/styles/settings/_utilities.scss
@@ -100,6 +100,7 @@ $utilities: () !default;
           center: center,
           space-between: space-between,
           space-around: space-around,
+          space-evenly: space-evenly,
         )
       ),
       "align-items": (
