fix(VSystemBar): expand full width

--- a/packages/vuetify/src/components/VSystemBar/VSystemBar.sass
+++ b/packages/vuetify/src/components/VSystemBar/VSystemBar.sass
@@ -8,9 +8,11 @@
   flex: $system-bar-flex
   height: $system-bar-height
   justify-content: $system-bar-justify-content
+  max-width: 100%
   padding: $system-bar-padding
   position: relative
   text-align: $system-bar-text-align
+  width: 100%
 
   .v-icon
     font-size: $system-bar-icon-font-size
