--- a/packages/vuetify/src/components/VTextField/VTextField.sass
+++ b/packages/vuetify/src/components/VTextField/VTextField.sass
@@ -6,6 +6,7 @@
 /* region BLOCK */
 .v-text-field
   input
+    color: inherit
     flex: $text-field-input-flex
     opacity: 0
     transition: $text-field-input-transition
