--- a/packages/vuetify/src/components/VCard/_variables.scss
+++ b/packages/vuetify/src/components/VCard/_variables.scss
@@ -2,31 +2,36 @@
 @use '../../styles/tools';
 
 // Defaults
+$card-actions-flex: 1 1 auto !default;
 $card-actions-min-height: 52px !default;
 $card-actions-padding: .5rem !default;
 $card-avatar-align-self: flex-start !default;
 $card-avatar-header-padding: 0 !default;
-$card-avatar-margin-end: 1rem !default;
-$card-avatar-margin-start: 1rem !default;
 $card-avatar-padding: .5rem 1rem !default;
 $card-background: rgb(var(--v-theme-surface)) !default;
-$card-plain-opacity: .62 !default;
 $card-border-color: settings.$border-color-root !default;
 $card-border-radius: settings.$border-radius-root !default;
 $card-border-style: settings.$border-style-root !default;
 $card-border-thin-width: thin !default;
 $card-border-width: 0 !default;
 $card-color: rgba(var(--v-theme-on-surface), var(--v-high-emphasis-opacity)) !default;
+$card-content-flex: 1 1 auto !default;
+$card-content-padding: 16px !default;
 $card-disabled-opacity: 0.6 !default;
 $card-elevation: 1 !default;
+$card-header-flex: 1 1 auto !default;
+$card-header-text-flex: 1 1 auto !default;
 $card-hover-elevation: 8 !default;
+$card-img-flex: 1 1 auto !default;
 $card-item-align-items: center !default;
 $card-item-padding: .625rem 1rem !default;
 $card-padding: 0 !default;
+$card-plain-opacity: .62 !default;
 $card-positions: absolute fixed !default;
 $card-subtitle-color: rgba(var(--v-theme-on-surface), var(--v-medium-emphasis-opacity)) !default;
 $card-subtitle-comfortable-line-height: 1.125rem !default;
 $card-subtitle-compact-line-height: 1rem !default;
+$card-subtitle-flex: 1 1 auto !default;
 $card-subtitle-font-size: tools.map-deep-get(settings.$typography, 'body-2', 'size') !default;
 $card-subtitle-font-weight: tools.map-deep-get(settings.$typography, 'body-2', 'weight') !default;
 $card-subtitle-header-padding: 0 0 .25rem !default;
@@ -38,6 +43,7 @@ $card-subtitle-text-transform: none !default;
 $card-text-color: rgba(var(--v-theme-on-surface), var(--v-medium-emphasis-opacity)) !default;
 $card-text-comfortable-line-height: 1.2rem !default;
 $card-text-compact-line-height: 1.15rem !default;
+$card-text-flex: 1 1 auto !default;
 $card-text-font-size: tools.map-deep-get(settings.$typography, 'body-2', 'size') !default;
 $card-text-font-weight: tools.map-deep-get(settings.$typography, 'body-2', 'weight') !default;
 $card-text-letter-spacing: tools.map-deep-get(settings.$typography, 'body-2', 'letter-spacing') !default;
@@ -48,6 +54,7 @@ $card-text-text-transform: tools.map-deep-get(settings.$typography, 'body-2', 't
 $card-tile-border-radius: 0 !default;
 $card-title-comfortable-line-height: 1.75rem !default;
 $card-title-compact-line-height: 1.55rem !default;
+$card-title-flex: 1 1 auto !default;
 $card-title-font-size: tools.map-deep-get(settings.$typography, 'h6', 'size') !default;
 $card-title-font-weight: tools.map-deep-get(settings.$typography, 'h6', 'weight') !default;
 $card-title-header-padding: 0 !default;
@@ -60,8 +67,8 @@ $card-title-padding: .5rem 1rem !default;
 $card-title-text-transform: none !default;
 $card-title-word-break: normal !default;
 $card-title-word-wrap: break-word !default;
-$card-transition-property: box-shadow, opacity, background !default;
 $card-transition-duration: 0.28s !default;
+$card-transition-property: box-shadow, opacity, background !default;
 $card-transition-timing-function: settings.$standard-easing !default;
 
 $card-border: (
