fix(VTabs): inherit height from toolbar, remove scoped defaults
fixes #14863

--- a/packages/vuetify/src/components/VTabs/VTabs.sass
+++ b/packages/vuetify/src/components/VTabs/VTabs.sass
@@ -53,3 +53,8 @@
       margin-inline-start: 52px
     .v-tab:last-child
       margin-inline-end: 52px
+
+.v-toolbar__content
+  > .v-tabs,
+  .v-tab
+    height: inherit
