--- a/packages/vuetify/src/components/VCard/_variables.scss
+++ b/packages/vuetify/src/components/VCard/_variables.scss
@@ -2,7 +2,7 @@
 @use '../../styles/tools';
 
 // Defaults
-$card-actions-flex: 1 1 auto !default;
+$card-actions-flex: none !default;
 $card-actions-min-height: 52px !default;
 $card-actions-padding: .5rem !default;
 $card-avatar-align-self: flex-start !default;
@@ -19,7 +19,7 @@ $card-content-flex: 1 1 auto !default;
 $card-content-padding: 16px !default;
 $card-disabled-opacity: 0.6 !default;
 $card-elevation: 1 !default;
-$card-header-flex: 1 1 auto !default;
+$card-header-flex: none !default;
 $card-header-text-flex: 1 1 auto !default;
 $card-hover-elevation: 8 !default;
 $card-img-flex: 1 1 auto !default;
@@ -31,7 +31,7 @@ $card-positions: absolute fixed !default;
 $card-subtitle-color: rgba(var(--v-theme-on-surface), var(--v-medium-emphasis-opacity)) !default;
 $card-subtitle-comfortable-line-height: 1.125rem !default;
 $card-subtitle-compact-line-height: 1rem !default;
-$card-subtitle-flex: 1 1 auto !default;
+$card-subtitle-flex: none !default;
 $card-subtitle-font-size: tools.map-deep-get(settings.$typography, 'body-2', 'size') !default;
 $card-subtitle-font-weight: tools.map-deep-get(settings.$typography, 'body-2', 'weight') !default;
 $card-subtitle-header-padding: 0 0 .25rem !default;
@@ -54,7 +54,7 @@ $card-text-text-transform: tools.map-deep-get(settings.$typography, 'body-2', 't
 $card-tile-border-radius: 0 !default;
 $card-title-comfortable-line-height: 1.75rem !default;
 $card-title-compact-line-height: 1.55rem !default;
-$card-title-flex: 1 1 auto !default;
+$card-title-flex: none !default;
 $card-title-font-size: tools.map-deep-get(settings.$typography, 'h6', 'size') !default;
 $card-title-font-weight: tools.map-deep-get(settings.$typography, 'h6', 'weight') !default;
 $card-title-header-padding: 0 !default;
