fix(VBtn/VChip): do not wrap text, hide overflow

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -14,8 +14,9 @@
   justify-content: center
   letter-spacing: $button-text-letter-spacing
   line-height: $button-line-height
+  max-width: $button-max-width
   outline: none
-  overflow: visible
+  overflow: $button-overflow
   position: relative
   text-decoration: none
   text-indent: $button-text-letter-spacing
@@ -26,6 +27,7 @@
   user-select: none
   vertical-align: $button-vertical-align
   flex-shrink: 0
+  white-space: $button-white-space
 
   @at-root
     @include button-sizes()
