--- a/packages/vuetify/src/components/VChip/VChip.sass
+++ b/packages/vuetify/src/components/VChip/VChip.sass
@@ -8,8 +8,11 @@
   cursor: default
   display: inline-flex
   font-weight: $chip-font-weight
+  max-width: $chip-max-width
+  overflow: hidden
   position: relative
   text-decoration: none
+  white-space: $chip-white-space
   vertical-align: middle
 
   @at-root
