--- a/packages/vuetify/src/components/VBtn/_variables.scss
+++ b/packages/vuetify/src/components/VBtn/_variables.scss
@@ -34,6 +34,8 @@ $button-stacked-line-height: 1.25 !default;
 $button-plain-opacity: .62 !default;
 $button-padding-ratio: 2.25 !default;
 $button-stacked-padding-ratio: 4.5 !default;
+$button-max-width: 100% !default;
+$button-overflow: hidden !default;
 $button-positions: absolute fixed !default;
 $button-text-letter-spacing: tools.map-deep-get(settings.$typography, 'button', 'letter-spacing') !default;
 $button-text-transform: tools.map-deep-get(settings.$typography, 'button', 'text-transform') !default;
@@ -43,6 +45,7 @@ $button-width-ratio: math.div(16, 9) !default;
 $button-snackbar-action-padding: 0 8px !default;
 $button-stacked-width-ratio: 1 !default;
 $button-rounded-border-radius: map.get(settings.$rounded, 'xl') !default;
+$button-white-space: nowrap !default;
 
 $button-density: ('default': 0, 'comfortable': -2, 'compact': -3) !default;
 $button-stacked-density: ('default': 0, 'comfortable': -4, 'compact': -6) !default;
