fix(VBtn): styling issues with icons and toolbars

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -104,8 +104,11 @@
   .v-icon
     --v-icon-size-multiplier: #{calc(18/21)}
 
-  &--stacked,
   &--icon
+    .v-icon
+      --v-icon-size-multiplier: 1
+
+  &--stacked
     .v-icon
       --v-icon-size-multiplier: #{calc(24/21)}
 
