fix(VCard): show elevation when using hover

--- a/packages/vuetify/src/components/VCard/VCard.sass
+++ b/packages/vuetify/src/components/VCard/VCard.sass
@@ -5,7 +5,6 @@
 
 .v-card
   display: block
-  overflow: hidden
   position: relative
   padding: $card-padding
   text-decoration: none
@@ -137,6 +136,7 @@
   font-weight: $card-text-font-weight
   letter-spacing: $card-text-letter-spacing
   padding: $card-text-padding
+  // position: relative
   text-transform: $card-text-text-transform
   transition: inherit
   transition-property: color, opacity
@@ -146,6 +146,7 @@
 .v-card-content
   flex: $card-content-flex
   padding: $card-text-padding
+  // position: relative
 
 .v-card-title
   align-items: center
