fix(VListItem): remove flex from action/avatar/icon

--- a/packages/vuetify/src/components/VList/VListItem.sass
+++ b/packages/vuetify/src/components/VList/VListItem.sass
@@ -31,10 +31,10 @@
 .v-list-item-action,
 .v-list-item-avatar,
 .v-list-item-icon
-
   align-self: center
   display: flex
   align-items: center
+  flex: none
   transition: inherit
   transition-property: height, width
 
